--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "17.0.21",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
     "@types/zxcvbn": "^4.4.1",
     "@vercel/node": "1.13.0",
     "faker": "5.5.3",
     "jest": "^28.1.3",
     "prisma": "4.0.0",
+    "supertest": "^6.2.4",
     "ts-jest": "^28.0.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "4.5.5"
